Add extension to Espresso test

--- a/Espresso/Swiftnotes-solution/app/build.gradle
+++ b/Espresso/Swiftnotes-solution/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+
+    androidTestCompile('com.xamarin.testcloud:espresso-support:1.3')
 }
